# gastown-fin

./: .env.example  .gitignore  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: chat.py  config.py  db.py  main.py  massive.py  portfolio.py  price_cache.py  simulator.py  snapshots.py  stream.py
backend/app/market/: __init__.py  provider.py  simulator.py
backend/app/routers/: chat.py  portfolio.py  watchlist.py
backend/schema/: 001_users.sql  002_users_profile.sql  003_watchlist.sql  004_positions.sql  005_trades.sql  006_portfolio_snapshots.sql  007_chat_messages.sql
backend/tests/: conftest.py  test_api_routes.py  test_chat.py  test_portfolio.py  test_price_cache.py  test_simulator.py
frontend/: Dockerfile  jest.config.ts  package-lock.json  package.json
frontend/src/__tests__/: components.test.tsx  price-context.test.tsx  providers.test.tsx  sse-client.test.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/components/: PnLChart.tsx  PositionsTable.tsx  PriceChart.tsx  TradeBar.tsx  add-ticker-form.tsx  chat-panel.tsx  header.tsx  heatmap-panel.tsx  index.ts  pnl-chart-panel.tsx  portfolio-heatmap.tsx  positions-panel.tsx  price-chart-panel.tsx  sparkline.tsx  trade-bar.tsx  watchlist-panel.tsx  watchlist-row.tsx
frontend/src/context/: PriceContext.tsx
frontend/src/lib/: index.ts  (+4 more)
test/: Dockerfile.playwright  docker-compose.test.yml  package-lock.json  package.json  playwright.config.ts
test/e2e/: fresh-start.spec.ts  helpers.ts  portfolio.spec.ts  sse-resilience.spec.ts  trading.spec.ts
(+6 files in other folders)
